--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <script type="text/javascript" src="lose2.js"></script>
         <script type="text/javascript" src="tutorial2.js"></script>
         <script type="text/javascript" src="thankPage.js"></script>
+        <script type="text/javascript" src="story1.js"></script>
+        <script type="text/javascript" src="story2.js"></script>
+        <script type="text/javascript" src="story3.js"></script>
+        <script type="text/javascript" src="story4.js"></script>
+        <script type="text/javascript" src="small2lose.js"></script>
+        <script type="text/javascript" src="small3lose.js"></script>
+        <script type="text/javascript" src="CollectMoney.js"></script>
     </head>
     <body>
     </body>
